Fixed collection description overlap (addresses #1226)

--- a/app/assets/stylesheets/my-collections.css.scss
+++ b/app/assets/stylesheets/my-collections.css.scss
@@ -91,9 +91,6 @@
       font-size: 16px;
       margin-left: 10px;
     }
-    p {
-      margin-top: -14px;
-    }
   }
   .recent-items {
     clear: both;
